# Xsand0s

./: .gitignore  ICF-PDS Programming Contest 2016.pptx  README.txt  XsAndOs Network Protocol.docx
src/: .gitignore  CMakeLists.txt  Makefile  hi.txt  readme_linux.txt  readme_windows.txt
src/boards/: D_Blob.txt  D_Chaplin.txt  D_Rand1.txt  D_Rand2.txt  D_Zebra.txt
src/brianPlayer/: CMakeLists.txt  Makefile  brian.cpp
src/bubu/: CMakeLists.txt  Makefile  bubu-player.cpp  bubu.cpp  cmake_install.cmake  helpers.cpp  helpers.hpp  mcts.cpp  network.h  two_d_array.hpp  xboard.hpp  xframe.hpp  xgame.hpp  xplayerInterface.cpp  xplayerInterface.h  xqueue.hpp
src/game/: board.cpp  board.h  game.cpp  game.h  move.cpp  move.h  network.cpp  network.h  occupation.cpp  occupation.h  platform.cpp  platform.h  playerInterface.cpp  playerInterface.h  predicate.cpp  predicate.h
src/host/: CMakeLists.txt  Makefile  host.cpp  host_windows.sln  host_windows.vcxproj  playerProxy.cpp  playerProxy.h
src/nomove/: CMakeLists.txt  nomove.cpp
src/player/: CMakeLists.txt  Makefile  player.cpp  player_windows.sln  player_windows.vcxproj
